--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ __pycache__/
 # C extensions
 *.so
 
+
 # Distribution / packaging
 .Python
 env/
@@ -97,3 +98,4 @@ ENV/
 .idea/
 .env/init_env.py
 .flaskenv
+.vscode/
